Fix dialog box resizing
Previously, the dialog boxes and their contents (text and images)
did not resize properly when the window was resized, leading to issues
such as shrinking elements or cutting off text. This affected the
user experience, especially when the window size was changed.

Modify DialogBox.fxml and adjust layout behavior to ensure that dialog
boxes and their contents resize smoothly with window resizing. Text and
images are now displayed appropriately, preventing shrinkage or text
truncation.

This fix improves the interface's responsiveness, enhancing the
usability of the application on different screen sizes.

--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -4,9 +4,11 @@
     -fx-border-width: 2px;
     -fx-background-radius: 1em 1em 0 1em;
     -fx-border-radius: 1em 1em 0 1em;
-    -fx-padding: 6px;
     -fx-border-insets: 0px 7px 0px 7px;
     -fx-background-insets: 0px 7px 0px 7px;
+    -fx-wrap-text: true;
+    -fx-max-width: Infinity;
+    -fx-padding: 10px;
 }
 
 .reply-label {
